# py-web-benchmarks

./: .gitignore  README.md  benchmark_tools.py  docker-compose.yml  markdown_generation.py  pyproject.toml  run-report.py  term_colors.py
app/internal/: benchmark_project.py  benchmark_tools.py  markdown_generation.py  run-report.py  term_colors.py
benchmark-reports/: bjoern-3.7.md  cherrypy-3.7.md  gunicorn-3.7.md  uvicorn-3.7.md
bjoern-3.7/: Dockerfile
bjoern-3.7/app/: main.py
bjoern-hug-3.7/: Dockerfile  requirements.txt
bjoern-hug-3.7/app/: main.py
cherrypy-3.7/: Dockerfile  server-aio.py  server.py
cherrypy-3.7/app/: main.py
gunicorn-3.7/: Dockerfile  entrypoint.sh  gunicorn_conf.py  start.sh
gunicorn-3.7/app/: main.py
old-benchmarks/: benchmark-report-2020.md
uvicorn-3.7/: Dockerfile  alp.Dockerfile  main.py
