[tool.poetry]
name = "py-web-benchmarks"
version = "0.1.0"
description = ""
authors = ["baw <baw@[MakeMachine].dev>"]
readme = "README.md"
packages = [{include = "app/internal"}]

[tool.poetry.scripts]
serve = "app.internal.__main__:serve"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
python-lsp-server = {extras = ["all"], version = "^1.7.1"}
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# Enable pycodestyle (`E`), Pyflakes (`F`), isort (`I001`) codes by default
select = ["W", "E", "F", "I001"]
ignore = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.11
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
		\.eggs
	|	\.git
	|	\.hg
	|	\.mypy_cache
	|	\.tox
	|	\.venv
	| _build
	| build
	| dist
)/
'''

[tool.isort]
profile = "black"
src_paths = ["app"]
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.coverage.run]
omit = [
  "*/tests/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]

[tool.coverage.html]
directory = "cov_html"
